examples/test/testpolicy9986.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9986
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key32: value49
      key37: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value33
          key47: value31
          key31: value37
      podSelector:
        matchLabels:
          key29: value20
          key0: value3
